--- a/sass/style.scss
+++ b/sass/style.scss
@@ -101,4 +101,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------- */
 @import "utilities/alignments";
 
+/* Bulma
+--------------------------------------------- */
 @import "../node_modules/bulma/bulma.sass";
