--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -19,6 +19,7 @@
 @import "elements/buttons";
 @import "elements/fields";
 
-/* Forms
+/* Bulma
 --------------------------------------------- */
 @import "../../node_modules/bulma/bulma.sass";
+
