--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ Description: Sunrise National Website Wordpress Theme
 Version: 2.0.1
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: sunrise-national
+Text Domain: fridays-for-future-paderborn
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready, bootstrap
 
 This theme, like WordPress, is licensed under the GPL.
