--- a/assets/css/base/_getwid.scss
+++ b/assets/css/base/_getwid.scss
@@ -164,7 +164,7 @@
 		overflow: visible;
 	}
 	.card {
-		background-color: $sunrise-background-dark;
+		background-color: $fff-background-dark;
 		&:hover {
 			text-decoration: none;
 		}
