--- a/assets/css/templates/blog-home-template.scss
+++ b/assets/css/templates/blog-home-template.scss
@@ -317,7 +317,7 @@
 	}
 }
 .instagram-section {
-	background-color: $sunrise-background-dark;
+	background-color: $fff-background-dark;
 	@include interior-shadow;
 	padding: $section-padding;
 	text-align: center;
