--- a/assets/css/base/_colors.scss
+++ b/assets/css/base/_colors.scss
@@ -5,91 +5,91 @@
 
 --------------------------------------------------------------*/
 
-.has-sunrise-magenta-color {
+.has-fff-magenta-color {
 	color: $purple !important;
 }
 
-.has-sunrise-magenta-background-color {
+.has-fff-magenta-background-color {
 	background: $purple !important;
 }
 
-.has-sunrise-gold-color {
+.has-fff-gold-color {
 	color: $yellow !important;
 }
 
-.has-sunrise-gold-background-color {
+.has-fff-gold-background-color {
 	background: $yellow !important;
 }
 
-.has-sunrise-red-color {
+.has-fff-red-color {
 	color: $red !important;
 }
 
-.has-sunrise-red-background-color {
+.has-fff-red-background-color {
 	background: $red !important;
 }
 
-.has-sunrise-grey-color {
+.has-fff-grey-color {
 	color: $gray-sunrise !important;
 }
 
-.has-sunrise-grey-background-color {
+.has-fff-grey-background-color {
 	background: $gray-sunrise !important;
 }
 
-.has-sunrise-white-color {
+.has-fff-white-color {
 	color: $white !important;
 }
 
-.has-sunrise-white-background-color {
+.has-fff-white-background-color {
 	background: $white !important;
 }
 
-.has-sunrise-orange-color {
+.has-fff-orange-color {
 	color: $orange !important;
 }
 
-.has-sunrise-orange-background-color {
+.has-fff-orange-background-color {
 	background: $orange !important;
 }
 
-.has-sunrise-green-color {
+.has-fff-green-color {
 	color: $green !important;
 }
 
-.has-sunrise-green-background-color {
+.has-fff-green-background-color {
 	background: $green !important;
 }
 
-.has-sunrise-background-dark-color {
-	color: $sunrise-background-dark !important;
+.has-fff-background-dark-color {
+	color: $fff-background-dark !important;
 }
 
-.has-sunrise-background-dark-background-color {
-	background: $sunrise-background-dark !important;
+.has-fff-background-dark-background-color {
+	background: $fff-background-dark !important;
 }
 
-.has-sunrise-background-light-color {
-	color: $sunrise-background-light !important;
+.has-fff-background-light-color {
+	color: $fff-background-light !important;
 }
 
-.has-sunrise-background-light-background-color {
-	background: $sunrise-background-light !important;
+.has-fff-background-light-background-color {
+	background: $fff-background-light !important;
 }
 
-.has-sunrise-black-color {
+.has-fff-black-color {
 	color: $black !important;
 }
 
-.has-sunrise-black-background-color {
+.has-fff-black-background-color {
 	background: $black !important;
 }
 
-.has-sunrise-white-color {
+.has-fff-white-color {
 	color: $white !important;
 }
 
-.has-sunrise-white-background-color {
+.has-fff-white-background-color {
 	background: $white !important;
 }
 
