updated colors and social menu spacing

--- a/assets/css/base/_bootstrap_overrides.scss
+++ b/assets/css/base/_bootstrap_overrides.scss
@@ -48,7 +48,7 @@ $pink: #e83e8c !default;
 $red: #ef4c39 !default;
 $orange: #fd9014 !default;
 // $yellow: #ffde16 !default;
-$yellow: #1da64a !default;
+$yellow: #ffffff !default;
 $green: #e3eddf !default;
 $teal: #20c997 !default;
 $cyan: #f7f5e8 !default;
