--- a/assets/css/templates/blog-home-template.scss
+++ b/assets/css/templates/blog-home-template.scss
@@ -196,7 +196,7 @@
 		}
 		.entry-title {
 			font-size: 18px;
-			color: $black;
+			color: $main-green;
 			line-height: 1.2;
 		}
 		.entry-meta {
