--- a/assets/css/base/_colors.scss
+++ b/assets/css/base/_colors.scss
@@ -57,8 +57,20 @@
 	color: $green !important;
 }
 
-.has-fff-green-background-color {
-	background: $green !important;
+.has-fff-dark-green-color {
+	color: $dark-green !important;
+}
+
+.has-fff-dark-green-background-color {
+	background: $dark-green !important;
+}
+
+.has-fff-main-green-color {
+	color: $main-green !important;
+}
+
+.has-fff-main-green-background-color {
+	background: $main-green !important;
 }
 
 .has-fff-background-dark-color {
