fixed entry heading styling

--- a/assets/css/base/_mixins.scss
+++ b/assets/css/base/_mixins.scss
@@ -136,7 +136,7 @@
 	padding: 0.01rem;
 	box-sizing: content-box;
 	display: inline;
-	box-shadow: 10px 0 0 $yellow, -10px 0 0 $yellow;
+	box-shadow: 10px 0 0 $dark-green, -10px 0 0 $dark-green;
 }
 @mixin dark-full-overlay {
 	left: 0;
