footer nav colors

--- a/assets/css/base/_bootstrap_overrides.scss
+++ b/assets/css/base/_bootstrap_overrides.scss
@@ -46,7 +46,7 @@ $indigo: #6610f2 !default;
 // $purple: #8f0d56 !default;
 $purple: #1da64a !default;
 $pink: #e83e8c !default;
-$red: #ef4c39 !default;
+$red: #ec5250 !default;
 $orange: #fd9014 !default;
 // $yellow: #ffde16 !default;
 $yellow: #ffffff !default;
