--- a/assets/css/template-parts/footer-nav.scss
+++ b/assets/css/template-parts/footer-nav.scss
@@ -130,8 +130,8 @@ body footer {
 		justify-content: center;
 		align-items: center;
 		color: $white;
+		font-weight: $font-weight-bold;
 		font-family: $font-family-serif;
-		font-style: italic;
 		text-align: center;
 		font-size: 1.67rem;
 		transition: 0.4s all;
