fixed navbar font

--- a/assets/css/template-parts/header-nav.scss
+++ b/assets/css/template-parts/header-nav.scss
@@ -683,7 +683,7 @@ ul.social-icons li {
 .modal-menu > li > a,
 .modal-menu > li > .ancestor-wrapper > a,
 .toggle-inner .toggle-text {
-	font-family: "Source Sans Pro", sans-serif;
+	font-family: $font-family-sans-serif, sans-serif;
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: normal;
